syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dritelabs/accounts/pb";

message Address {
  string id = 1;
  string user_id = 2;
  string city = 3;
  string country = 4;
  string line1 = 5;
  string line2 = 6;
  string phone_number = 7;
  int32 postal_code = 8;
  string region = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}